# realtime_operator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pre-commit.yml  publish-to-pypi.yml
examples/: operator.py
realtime_operator/: alignment.py  compression.py  sandbox.py  single_operator.py
tests/: test_alignment.py  test_compression.py  test_single_operator.py
