[project]
name = realtime operator
version = "0.0.1"
authors = [
  { name="Ernst Holger Amort", email="holgeramort@gmail.com" },
]
description = "A package to perfom real-time operations on time seriesdata streams."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"